# skpm

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  enviroment.yml  pyproject.toml  requirements.txt  script.py
.github/workflows/: tests.yml
docs/: conf.py  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/install/: installation.rst
docs/source/: conf.py  index.rst  installation.rst  requirements.txt
docs/source/examples/: 00_intro.ipynb  01_data_api.ipynb  02_unbiased_split.ipynb  03_pipeline_eval.ipynb
examples/: README.rst  event_log_api.py  feature_extracion.py  plot_pipeline_evaluation.py  plot_rt_pipeline.py  remaining_time_pipeline.py  unbiased_split.py
examples/remaining_time/: README.rst  remaining_time_pipeline.py
skpm/: __init__.py  base.py  preprocessing.py
skpm/bucketing/: base.py
skpm/encoding/: __init__.py  ngrams.py  preprocessing.py  trace.py
skpm/event_feature_extraction/: __init__.py  _time.py  inter.py  meta.py  resource.py  targets.py  time.py
skpm/event_logs/: __init__.py  base.py  bpi.py  bpi_ocel.py  extract.py  utils.py
skpm/utils/: __init__.py  graph.py  helpers.py  validation.py
src/skpm/: __init__.py  base.py  config.py  warnings.py
src/skpm/bucketing/: __init__.py  base.py
src/skpm/case_feature_extraction/: __init__.py  features.py  helpers.py  targets.py
tests/: test.py
tests/bucketing/: test_bucketing.py
tests/encoding/: test_ngrams_encoding.py  test_trace_encoding.py
tests/event_feature_extraction/: resource.py  test_digraph.py  test_resource.py  test_time.py  test_wip.py  time.py
tests/event_logs/: test_bpi.py  test_download_extract.py  test_parser.py  test_split.py
tests/feature_extraction/: test_targets.py
tests/sequence_encoding/: test_aggregation.py  test_bucketing.py  test_index.py
tests/utils/: test_graph.py  test_validation.py
use_cases/: README.md  pipeline.ipynb  time_features.ipynb
(+133 files in other folders)
