[tool.poetry]
name = "skpm"
version = "0.0.1"
description = "A process mining library built upon scikit-learn!"
authors = ["Rafael Oyamada"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
myst-nb = {version = "^1.0.0", python = "^3.10"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
